compiler/tests/errortests/arithmetic/arithmetic-incomplete-and.txt
FILENAME:3:23: error: missing right hand side expression after 'and' operator
    let y : i32 = x & ;
                      ^
